grammar.js
    source_file: $ => repeat($._declaration),

    // ---------------------------------------------------------------
    // Declarations
    // ---------------------------------------------------------------

    // Visibility annotation: `pub` or `pub(bind)`.
    // `bind` is a contextual keyword parsed only inside the parens after `pub`.
    visibility: $ => seq("pub", optional(seq("(", "bind", ")"))),

    _declaration: $ => choice(
      $.multi_decl,
      $.param_declaration,
      $.node_declaration,
      $.dimension_declaration,
      $.unit_declaration,
      $.type_declaration,

      $.index_declaration,
      $.plugin_import_declaration,
      $.import_declaration,
      $.include_declaration,
      $.dag_declaration,
      $.assert_declaration,
      $.plot_declaration,
      $.figure_declaration,
      $.layer_declaration,
    ),

    // #[name] or #[name(arg1, arg2)] or #[name(Index#Variant, (A#X, B#Y))]
    param_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      "param",
      field("name", $.identifier),
      optional(seq(":", field("type", $.type_expr))),
      optional(seq("=", field("value", $._expr))),
      ";",
    ),

    // node v_exhaust: Velocity = @isp * @g0;
    // const node g0: Acceleration = 9.80665 m/s^2;
    node_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      choice(
        seq(
          optional("const"), "node", field("name", $.identifier),
          optional(seq(":", field("type", $.type_expr))),
          "=", field("value", $._expr),
        ),
        seq(
          "node", field("name", $.identifier),
          ":", field("type", $.type_expr),
          "=", field("value", $.todo_definition),
        ),
      ),
      ";",
    ),

    // A whole-node definition, not an expression or an ordinary call.
    dimension_declaration: $ => seq(
      optional($.visibility),
      optional("base"),
      "dim",
      field("name", $.identifier),
      optional(seq("=", field("definition", $.dim_expr))),
      ";",
    ),

    // base unit m: Length;                 -- base unit (no body)
    // unit km: Length = 1000 m;             -- derived unit
    // const unit hr: Time = 3600 s;         -- compile-time-only unit
    unit_declaration: $ => choice(
      seq(
        optional($.visibility),
        "base",
        "unit",
        field("name", $.identifier),
        ":",
        field("dimension", $.dim_expr),
        ";",
      ),
      seq(
        optional($.visibility),
        optional("const"),
        "unit",
        field("name", $.identifier),
        ":",
        field("dimension", $.dim_expr),
        "=",
        field("definition", $.unit_def),
        ";",
      ),
    ),

    // Every `type T { … }` is an n-variant tagged union. Record-
    // shaped types are written as a single-variant union whose sole
    // constructor's name matches the type's name:
    //   type Position { Position(x: Length, y: Length) }
    // A unit marker:
    //   type Eci { Eci }
    // A required type stub:
    //   type Element;
    // A multi-variant union:
    //   type Maneuver {
    //     Impulsive(delta_v: Velocity),
    //     LowThrust(thrust: Force, duration: Time),
    //     Coast,
    //   }
    type_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      "type",
      field("name", $.identifier),
      optional(field("generics", $.generic_params)),
      choice(
        seq("{", $.constructor_list, "}"),
        ";",
      ),
    ),

    field_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type_expr),
    ),

    constructor_list: $ => seq(
      $.constructor_declaration,
      repeat(seq(",", $.constructor_declaration)),
      optional(","),
    ),

    // A constructor is either a bare unit constructor or uses the one
    // canonical parenthesized payload form.
    constructor_declaration: $ => seq(
      field("name", $.identifier),
      optional(seq(
        "(",
        optional(seq(
          $.field_declaration,
          repeat(seq(",", $.field_declaration)),
          optional(","),
        )),
        ")",
      )),
    ),

    // index Maneuver = { Departure, Correction, Insertion };
    // index TimeStep = range(0.0 s, 1.0 s, step: 0.1 s);
    // index Samples = linspace(0.0 s, 1.0 s, points: 11);
    // index Foo;  (required named)
    // index Foo: Time;  (required coordinate)
    index_declaration: $ => choice(
      // Named index: index Maneuver = { Departure, Correction, Insertion };
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        "=",
        "{",
        $.variant,
        repeat(seq(",", $.variant)),
        optional(","),
        "}",
        ";",
      ),
      // Exact-step coordinate index.
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        "=",
        alias($._range_keyword, "range"),
        "(",
        field("start", $._expr),
        ",",
        field("end", $._expr),
        ",",
        alias($._step_keyword, "step"),
        ":",
        field("step", $._expr),
        ")",
        ";",
      ),
      // Exact-count coordinate index.
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        "=",
        alias($._linspace_keyword, "linspace"),
        "(",
        field("start", $._expr),
        ",",
        field("end", $._expr),
        ",",
        alias($._points_keyword, "points"),
        ":",
        field("points", $._nat_expr),
        ")",
        ";",
      ),
      // Required named: index Foo;
      seq(optional($.visibility), "index", field("name", $.identifier), ";"),
      // Required coordinate: index Foo: Time;
      seq(
        optional($.visibility),
        "index",
        field("name", $.identifier),
        ":",
        field("dimension", $.dim_expr),
        ";",
      ),
    ),

    variant: $ => $.identifier,


    generic_params: $ => seq(
      "<",
      $.generic_param,
      repeat(seq(",", $.generic_param)),
      optional(","),
      ">",
    ),

    generic_param: $ => seq(
      field("name", $.identifier),
      ":",
      field("constraint", $.generic_constraint),
      optional(seq("=", field("default", $.generic_arg))),
    ),

    generic_constraint: $ => choice("Dim", "Index", "Nat", "Type"),


    // import nasa.rocket;                                 -- bare module import
    // import nasa.rocket as r;                            -- module import with alias
    // import nasa.rocket::{ type Orbit, compute_thrust as ct }; -- brace-list selector
    //
    // Whole-DAG imports may be `pub`; selective re-exports mark individual
    // items `pub` in the brace list. The brace-list and `as` forms
    // are mutually exclusive. All paths are dot-separated and absolute from
    // the package root; no file-path strings, no `..`, no `/`.
    import_declaration: $ => seq(
      repeat($.attribute),
      optional("pub"),
      "import",
      field("path", $.module_path),
      optional($._import_tail),
      ";",
    ),

    _import_tail: $ => choice(
      seq("as", field("alias", $.identifier)),
      $.brace_import_list,
    ),

    // import plugin "plugins/coolprop.wasm" as fluids {
    //     fn density(p: Pressure, t: Temperature) -> Density;
    //     fn smooth<D: Dim, I: Index>(xs: D[I], window: Dimensionless) -> D[I];
    // }
    //
    // Extern-function declarations (issue graphcal#943, Phase A). The
    // alias is mandatory — extern functions are only callable qualified
    // through it — and there is no `pub` form and no trailing `;`.
    //
    // `plugin` is a contextual keyword in the reference parser: `import`
    // selects this form only when followed by the identifier `plugin`
    // *and* a string literal, so `import plugin.tools as t;` stays an
    // ordinary module import. The keyword slot is therefore spelled
    // `alias($.identifier, "plugin")` rather than a literal token —
    // a literal would win keyword extraction over `identifier` after
    // `import` and break module paths whose first segment is `plugin`.
    // The string literal in second position is what disambiguates.
    plugin_import_declaration: $ => seq(
      "import",
      alias($.identifier, "plugin"),
      field("path", $.string_literal),
      "as",
      field("alias", $.identifier),
      "{",
      repeat($.extern_fn_declaration),
      "}",
    ),

    // fn geometric_mean<D1: Dim, D2: Dim>(x: D1, y: D2) -> D1^(1/2) * D2^(1/2);
    extern_fn_declaration: $ => seq(
      "fn",
      field("name", $.identifier),
      optional($.extern_generic_binders),
      "(",
      optional(seq(
        $.extern_fn_param,
        repeat(seq(",", $.extern_fn_param)),
        optional(","),
      )),
      ")",
      "->",
      field("result", $.type_expr),
      ";",
    ),

    // Generic binders: <D: Dim>, <D1: Dim, D2: Dim>, <D: Dim, I: Index>
    //
    // Same `name: constraint` form as `generic_params`, restricted to
    // `Dim` and `Index` (no `Nat`/`Type`, no defaults). The constraint is
    // aliased to `generic_constraint` so it gets the same node name (and
    // highlighting) as constraints in `type` declarations.
    extern_generic_binders: $ => seq(
      "<",
      $.extern_generic_binder,
      repeat(seq(",", $.extern_generic_binder)),
      optional(","),
      ">",
    ),

    extern_generic_binder: $ => seq(
      field("name", $.identifier),
      ":",
      field("constraint", alias(choice("Dim", "Index"), $.generic_constraint)),
    ),

    extern_fn_param: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type_expr),
    ),

    brace_import_list: $ => seq(
      "::",
      "{",
      optional(seq(
        $.import_item,
        repeat(seq(",", $.import_item)),
        optional(","),
      )),
      "}",
    ),

    // include nasa.rocket.compute_thrust(args);                       -- bare include
    // include nasa.rocket.compute_thrust(args) as ct;                 -- include with alias
    // include nasa.rocket.compute_thrust(args)::{ thrust };            -- brace-list output selector
    //
    // The `(args)` parameter binding list is mandatory (may be empty).
    // Include use-sites have no leading visibility; only individual brace-list
    // outputs may be marked `pub`. The brace-list and `as` forms are mutually
    // exclusive.
    include_declaration: $ => seq(
      repeat($.attribute),
      "include",
      field("path", $.module_path),
      field("param_bindings", $.include_param_bindings),
      optional($._include_tail),
      ";",
    ),

    _include_tail: $ => choice(
      seq("as", field("alias", $.identifier)),
      $.brace_include_list,
    ),

    brace_include_list: $ => seq(
      "::",
      "{",
      optional(seq(
        $.include_item,
        repeat(seq(",", $.include_item)),
        optional(","),
      )),
      "}",
    ),

    // DAG input bindings: unmarked means param; Static inputs require an
    // explicit `type`, `dim`, or `index` marker.
    // The list may be empty: `include foo();` is valid (matches the
    // EBNF `[ include_param_binding, { ",", ... }, [ "," ] ]`).
    include_param_bindings: $ => seq(
      "(",
      optional(seq(
        $.include_param_binding,
        repeat(seq(",", $.include_param_binding)),
        optional(","),
      )),
      ")",
    ),

    include_param_binding: $ => seq(
      optional(field("category", $.input_binding_category)),
      field("name", $.identifier),
      ":",
      field("value", $._expr),
    ),

    input_binding_category: _ => choice("type", "dim", "index"),

    // dag name { declarations... }
    module_path: $ => seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
    ),

    // Source identifier path preserved before semantic namespace resolution.
    //
    // Deliberately *not* left-associative: at `IDENT` with lookahead `<`
    // the reduce to `ident_path` (comparison reading) and the shift into
    // a fn_call/struct_construction turbofish must stay an unresolved
    // conflict so the GLR parser forks (see `conflicts`). With prec.left
    // the tie at PREC.CALL was resolved statically in favor of the
    // reduce, killing `Vec3<Length, Eci>(x: ...)` in expression position.
    namespace_path: $ => seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
    ),

    ident_path: $ => prec(PREC.CALL, choice(
      $.identifier,
      seq(
        field("namespace", $.namespace_path),
        "::",
        field("member", $.identifier),
      ),
    )),

    // Import item with an explicit marker for every non-term namespace.
    // Bare items select terms (declarations and constructors).
    import_item: $ => seq(
      repeat($.attribute),
      optional("pub"),
      optional(field("category", $.import_category)),
      field("name", $.identifier),
      optional(seq("as", field("alias", $.identifier))),
    ),

    import_category: _ => choice("type", "dim", "unit", "index"),

    // Include item with optional category, alias, and `pub` re-export
    // marker. Non-term instance members require the same explicit category
    // markers as selective imports.
    include_item: $ => seq(
      repeat($.attribute),
      optional("pub"),
      optional(field("category", $.import_category)),
      field("name", $.identifier),
      optional(seq("as", field("alias", $.identifier))),
    ),

    // assert velocity_in_range = @velocity < @max_velocity;
    // assert mass_approx = @mass ~= 100.0 kg +/- 1.0 kg;
    // assert relative = @x ~= 50.0 +/- abs(50.0) * 0.05;
    type_expr: $ => choice(
      $.indexed_type,
      $.constrained_type,
      $._type_expr_base,
    ),

    _type_expr_base: $ => choice(
      $.dimensionless,
      $.bool_type,
      $.int_type,
      $.datetime_type,
      $.complex_type,
      $.key_type,
      $.type_application,
      $.qualified_variant,
      $.dim_expr,
    ),

    // Constrained type: Mass(min: 100 kg, max: 2000 kg)
    dimensionless: $ => "Dimensionless",
    bool_type: $ => "Bool",
    int_type: $ => "Int",
    // Bare `Datetime` (= Datetime<UTC>) or the built-in parameterized
    // form `Datetime<TT>`. The reference parser keeps this separate from
    // `type_application` (whose head is an `ident_path`, not a keyword).
    key_type: $ => seq(
      "Key",
      "<",
      field("index", $.generic_arg),
      ">",
    ),

    // Indexed type: Velocity[Maneuver], Dimensionless[Fin(3)], D[I]
    indexed_type: $ => seq(
      field("base", choice($.constrained_type, $._type_expr_base)),
      "[",
      $._index_expr,
      repeat(seq(",", $._index_expr)),
      optional(","),
      "]",
    ),

    // Nat values are never implicitly lifted into Index positions.
    _index_expr: $ => choice(
      $.finite_index,
      $.ident_path,
    ),

    finite_index: $ => seq(
      alias($._fin_keyword, "Fin"),
      "(",
      field("cardinality", $._nat_expr),
      ")",
    ),

    _nat_expr: $ => choice(
      $.nat_add_expr,
      $.nat_mul_expr,
      $.identifier,
      $.nat_literal,
    ),

    // Nat addition expression in index position: N + 1, M + N + 2, M * N + 1
    nat_literal: $ => /[0-9][0-9_]*/,

    // ---------------------------------------------------------------
    // Dimension expressions: Length, Length^2, Mass * Length / Time^2
    // ---------------------------------------------------------------

    dim_expr: $ => prec.right(PREC.MUL + 1, seq(
      $.dim_term,
      repeat(seq(choice("*", "/"), $.dim_term)),
    )),

    // `Dimensionless` is the identity dimension, so it may be a term of a
    // compound dimension expression (`Dimensionless / Time`). A bare
    // `Dimensionless` type stays the `dimensionless` type node.
    index_arg: $ => $._expr,

    // Maneuver#Departure or module::Maneuver#Departure.
