test/corpus/import_categories.txt
================================================================================
Selective imports declare non-term categories explicitly
================================================================================

import finance.models::{
    pub dim Information,
    unit JPY as yen,
    pub index Category,
    type Student,
    pub Student,
};

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (module_path
      (identifier)
      (identifier))
    (brace_import_list
      (import_item
        (import_category)
        (identifier))
      (import_item
        (import_category)
        (identifier)
        (identifier))
      (import_item
        (import_category)
        (identifier))
      (import_item
        (import_category)
        (identifier))
      (import_item
        (identifier)))))

================================================================================
Selective includes declare non-term categories explicitly
================================================================================

include finance.models()::{
    pub dim Information,
    unit JPY as yen,
    pub index Category,
    type Student,
    pub Student,
};

--------------------------------------------------------------------------------

(source_file
  (include_declaration
    (module_path
      (identifier)
      (identifier))
    (include_param_bindings)
    (brace_include_list
      (include_item
        (import_category)
        (identifier))
      (include_item
        (import_category)
        (identifier)
        (identifier))
      (include_item
        (import_category)
        (identifier))
      (include_item
        (import_category)
        (identifier))
      (include_item
        (identifier)))))

================================================================================
Whole-DAG imports may be public
================================================================================

pub import finance.models;

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (module_path
      (identifier)
      (identifier))))

================================================================================
Bindable visibility on an import is rejected
================================================================================

pub(bind) import finance.models;

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (visibility)))

================================================================================
Leading bindable visibility on an include is rejected
================================================================================

pub(bind) include finance.models.report() as result;

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (visibility)))
