test/corpus/index_keys.txt
================================================================================
Index key types in annotations
================================================================================

index Maneuver = { Departure, Correction };
node critical: Key<Maneuver> = argmax(@delta_v);
node second: Key<Fin(3)> = key(Fin(3), 1);
node remote: Key<mission::Maneuver> = argmax(@dv);
node grid: Key<TimeStep>[Maneuver] = for m: Maneuver { argmax(@v) };
type Holder<I: Index> { Holder(slot: Key<I>) }

--------------------------------------------------------------------------------

(source_file
  (index_declaration
    (identifier)
    (variant
      (identifier))
    (variant
      (identifier)))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (type_expr
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))))))
    (fn_call
      (ident_path
        (identifier))
      (graph_ref
        (ident_path
          (identifier)))))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (finite_index
            (nat_literal)))))
    (key_form_expr
      (finite_index
        (nat_literal))
      (number)))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (type_expr
            (dim_expr
              (dim_term
                (ident_path
                  (namespace_path
                    (identifier))
                  (identifier))))))))
    (fn_call
      (ident_path
        (identifier))
      (graph_ref
        (ident_path
          (identifier)))))
  (node_declaration
    (identifier)
    (type_expr
      (indexed_type
        (key_type
          (generic_arg
            (type_expr
              (dim_expr
                (dim_term
                  (ident_path
                    (identifier)))))))
        (ident_path
          (identifier))))
    (for_expr
      (for_binding
        (identifier)
        (ident_path
          (identifier)))
      (fn_call
        (ident_path
          (identifier))
        (graph_ref
          (ident_path
            (identifier))))))
  (type_declaration
    (identifier)
    (generic_params
      (generic_param
        (identifier)
        (generic_constraint)))
    (constructor_list
      (constructor_declaration
        (identifier)
        (field_declaration
          (identifier)
          (type_expr
            (key_type
              (generic_arg
                (type_expr
                  (dim_expr
                    (dim_term
                      (ident_path
                        (identifier)))))))))))))

================================================================================
Key introduction forms
================================================================================

node at_start: Key<TimeStep> = key(TimeStep, 0.0 s);
node second: Key<Fin(8)> = key(Fin(8), 1);
node channel: Key<Fin(8)> = fin_key(Fin(8), @requested);
node before_event: Key<TimeStep> = floor_key(TimeStep, @event_time);
node after_event: Key<TimeStep> = ceil_key(TimeStep, @event_time);
node closest: Key<TimeStep> = nearest_key(mission::TimeStep, @event_time);
node selected: Pressure = @readings[fin_key(Fin(8), @requested)];

--------------------------------------------------------------------------------

(source_file
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (type_expr
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))))))
    (key_form_expr
      (ident_path
        (identifier))
      (quantity_literal
        (number)
        (unit_expr
          (unit_term
            (ident_path
              (identifier)))))))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (finite_index
            (nat_literal)))))
    (key_form_expr
      (finite_index
        (nat_literal))
      (number)))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (finite_index
            (nat_literal)))))
    (key_form_expr
      (finite_index
        (nat_literal))
      (graph_ref
        (ident_path
          (identifier)))))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (type_expr
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))))))
    (key_form_expr
      (ident_path
        (identifier))
      (graph_ref
        (ident_path
          (identifier)))))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (type_expr
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))))))
    (key_form_expr
      (ident_path
        (identifier))
      (graph_ref
        (ident_path
          (identifier)))))
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (type_expr
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))))))
    (key_form_expr
      (ident_path
        (namespace_path
          (identifier))
        (identifier))
      (graph_ref
        (ident_path
          (identifier)))))
  (node_declaration
    (identifier)
    (type_expr
      (dim_expr
        (dim_term
          (ident_path
            (identifier)))))
    (index_access
      (graph_ref
        (ident_path
          (identifier)))
      (index_arg
        (key_form_expr
          (finite_index
            (nat_literal))
          (graph_ref
            (ident_path
              (identifier))))))))

================================================================================
Qualified labels in expression position
================================================================================

node fallback: Key<Maneuver> = Maneuver#Departure;
node is_critical: Bool[Maneuver] = for m: Maneuver { m == @critical };
node matched: Bool = @choice == Maneuver#Departure;

--------------------------------------------------------------------------------

(source_file
  (node_declaration
    (identifier)
    (type_expr
      (key_type
        (generic_arg
          (type_expr
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))))))
    (qualified_variant
      (ident_path
        (identifier))
      (identifier)))
  (node_declaration
    (identifier)
    (type_expr
      (indexed_type
        (bool_type)
        (ident_path
          (identifier))))
    (for_expr
      (for_binding
        (identifier)
        (ident_path
          (identifier)))
      (binary_expr
        (ident_path
          (identifier))
        (graph_ref
          (ident_path
            (identifier))))))
  (node_declaration
    (identifier)
    (type_expr
      (bool_type))
    (binary_expr
      (graph_ref
        (ident_path
          (identifier)))
      (qualified_variant
        (ident_path
          (identifier))
        (identifier)))))

================================================================================
Key formers are ordinary identifiers outside call heads
================================================================================

param key: Dimensionless = 1.0;
node fin_key: Dimensionless = key;
node ratio: Dimensionless = key / fin_key;
node qualified: Dimensionless = plugin::key(1.0);
unit nearest_key: Dimensionless = 1.0 floor_key;
node generic: Dimensionless = ceil_key<Length>();

--------------------------------------------------------------------------------

(source_file
  (param_declaration
    (identifier)
    (type_expr
      (dimensionless))
    (number))
  (node_declaration
    (identifier)
    (type_expr
      (dimensionless))
    (ident_path
      (identifier)))
  (node_declaration
    (identifier)
    (type_expr
      (dimensionless))
    (binary_expr
      (ident_path
        (identifier))
      (ident_path
        (identifier))))
  (node_declaration
    (identifier)
    (type_expr
      (dimensionless))
    (fn_call
      (ident_path
        (namespace_path
          (identifier))
        (identifier))
      (number)))
  (unit_declaration
    (identifier)
    (dim_expr
      (dim_term
        (dimensionless)))
    (unit_def
      (number)
      (unit_expr
        (unit_term
          (ident_path
            (identifier))))))
  (node_declaration
    (identifier)
    (type_expr
      (dimensionless))
    (fn_call
      (ident_path
        (identifier))
      (generic_arg
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier)))))))))

================================================================================
Bare Key type annotations are rejected
================================================================================

node k: Key = 1;

--------------------------------------------------------------------------------

(source_file
  (node_declaration
    (identifier)
    (ERROR)
    (number)))
