test/corpus/plugin_import.txt
================================================================================
Plugin import with extern function declarations
================================================================================

import plugin "graphcal:demo" as demo {
    fn lerp<D: Dim>(a: D, b: D, t: Dimensionless) -> D;
    fn inverse<D: Dim>(x: D) -> D^-1;
    fn geometric_mean<D1: Dim, D2: Dim>(x: D1, y: D2) -> D1^(1/2) * D2^(1/2);
}

--------------------------------------------------------------------------------

(source_file
  (plugin_import_declaration
    (string_literal)
    (identifier)
    (extern_fn_declaration
      (identifier)
      (extern_generic_binders
        (extern_generic_binder
          (identifier)
          (generic_constraint)))
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (extern_fn_param
        (identifier)
        (type_expr
          (dimensionless)))
      (type_expr
        (dim_expr
          (dim_term
            (ident_path
              (identifier))))))
    (extern_fn_declaration
      (identifier)
      (extern_generic_binders
        (extern_generic_binder
          (identifier)
          (generic_constraint)))
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (type_expr
        (dim_expr
          (dim_term
            (ident_path
              (identifier))
            (exponent
              (signed_integer))))))
    (extern_fn_declaration
      (identifier)
      (extern_generic_binders
        (extern_generic_binder
          (identifier)
          (generic_constraint))
        (extern_generic_binder
          (identifier)
          (generic_constraint)))
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (type_expr
        (dim_expr
          (dim_term
            (ident_path
              (identifier))
            (exponent
              (signed_integer)
              (signed_integer)))
          (dim_term
            (ident_path
              (identifier))
            (exponent
              (signed_integer)
              (signed_integer))))))))

================================================================================
Empty plugin import block
================================================================================

import plugin "plugins/coolprop.wasm" as fluids {
}

--------------------------------------------------------------------------------

(source_file
  (plugin_import_declaration
    (string_literal)
    (identifier)))

================================================================================
Extern function without dimension variables
================================================================================

import plugin "plugins/coolprop.wasm" as fluids {
    fn density(p: Pressure, t: Temperature) -> Density;
    fn flag() -> Bool;
    fn count(x: Dimensionless) -> Int;
}

--------------------------------------------------------------------------------

(source_file
  (plugin_import_declaration
    (string_literal)
    (identifier)
    (extern_fn_declaration
      (identifier)
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (type_expr
        (dim_expr
          (dim_term
            (ident_path
              (identifier))))))
    (extern_fn_declaration
      (identifier)
      (type_expr
        (bool_type)))
    (extern_fn_declaration
      (identifier)
      (extern_fn_param
        (identifier)
        (type_expr
          (dimensionless)))
      (type_expr
        (int_type)))))

================================================================================
Extern function with index binder, array types, and record result
================================================================================

import plugin "graphcal:demo" as demo {
    fn smooth<D: Dim, I: Index>(xs: D[I], window: Dimensionless) -> D[I];
    fn resample<I: Index>(xs: Velocity[I]) -> Velocity[I];
    fn plan(dv: Velocity) -> DvSpan;
}

--------------------------------------------------------------------------------

(source_file
  (plugin_import_declaration
    (string_literal)
    (identifier)
    (extern_fn_declaration
      (identifier)
      (extern_generic_binders
        (extern_generic_binder
          (identifier)
          (generic_constraint))
        (extern_generic_binder
          (identifier)
          (generic_constraint)))
      (extern_fn_param
        (identifier)
        (type_expr
          (indexed_type
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))
            (ident_path
              (identifier)))))
      (extern_fn_param
        (identifier)
        (type_expr
          (dimensionless)))
      (type_expr
        (indexed_type
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))
          (ident_path
            (identifier)))))
    (extern_fn_declaration
      (identifier)
      (extern_generic_binders
        (extern_generic_binder
          (identifier)
          (generic_constraint)))
      (extern_fn_param
        (identifier)
        (type_expr
          (indexed_type
            (dim_expr
              (dim_term
                (ident_path
                  (identifier))))
            (ident_path
              (identifier)))))
      (type_expr
        (indexed_type
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))
          (ident_path
            (identifier)))))
    (extern_fn_declaration
      (identifier)
      (extern_fn_param
        (identifier)
        (type_expr
          (dim_expr
            (dim_term
              (ident_path
                (identifier))))))
      (type_expr
        (dim_expr
          (dim_term
            (ident_path
              (identifier))))))))

================================================================================
Module import whose first segment is spelled plugin
================================================================================

import plugin.tools as t;
import plugin;

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (module_path
      (identifier)
      (identifier))
    (identifier))
  (import_declaration
    (module_path
      (identifier))))

================================================================================
Signed and rational exponents in dim and unit expressions
================================================================================

dim InvLengthSquared = Length^-2;
dim RootLen = Length^(1/2);
node disp: RootLen = @r -> m^(1/2);
node per_minute: Frequency = @f -> min^-1;

--------------------------------------------------------------------------------

(source_file
  (dimension_declaration
    (identifier)
    (dim_expr
      (dim_term
        (ident_path
          (identifier))
        (exponent
          (signed_integer)))))
  (dimension_declaration
    (identifier)
    (dim_expr
      (dim_term
        (ident_path
          (identifier))
        (exponent
          (signed_integer)
          (signed_integer)))))
  (node_declaration
    (identifier)
    (type_expr
      (dim_expr
        (dim_term
          (ident_path
            (identifier)))))
    (convert_expr
      (graph_ref
        (identifier))
      (unit_expr
        (unit_term
          (identifier)
          (exponent
            (signed_integer)
            (signed_integer))))))
  (node_declaration
    (identifier)
    (type_expr
      (dim_expr
        (dim_term
          (ident_path
            (identifier)))))
    (convert_expr
      (graph_ref
        (identifier))
      (unit_expr
        (unit_term
          (identifier)
          (exponent
            (signed_integer)))))))
